Adding the first basic files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,2 +1,8 @@
 cmake_minimum_required(VERSION 2.8.11)
 project(usd_cpp_utilities)
+
+find_library(USD_SDF sdfasfdasdf)
+
+set(PLUGIN_NAME usd_cpp_utilities_plugin)
+
+add_subdirectory(src)
