Added boost as part of the build

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@
 add_library(${PLUGIN_NAME}
     SHARED
         instancer_scale_check.cpp
+        wrap_instancer_scale_check.cpp
 )
 
 target_include_directories(${PLUGIN_NAME}
@@ -12,6 +13,7 @@ PUBLIC
 
 target_link_libraries(${PLUGIN_NAME}
     ${PXR_sdf_LIBRARY}
+    ${USD_BOOST_PYTHON}
 )
 
 install(
