Moved code around to be a bit cleaner

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ set(PLUGIN_NAME usd_cpp_utilities_plugin)
 
 add_library(${PLUGIN_NAME}
     SHARED
+        common.cpp
         scale_check.cpp
 )
 
