Moving code around so the Python binding source code is separate from the regular code

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,4 @@
+set(PLUGIN_NAME usd_cpp_utilities_plugin)
+
 add_subdirectory(usd_utilities)  # The main C++ classes / functions
 add_subdirectory(python_bindings)  # Wrap `usd_utilities` as Python bindings, with Boost
