Changing CMake-related code to be simpler

--- a/src/usd_utilities/CMakeLists.txt
+++ b/src/usd_utilities/CMakeLists.txt
@@ -1,5 +1,5 @@
-include(cmake/add_the_plugin_library.cmake)
-include(cmake/export_the_plugin.cmake)
+include(cmake/add_scale_check.cmake)
+include(cmake/export_scale_check.cmake)
 
 # Copy the header files so external packages can include + use them
 install(
@@ -11,6 +11,6 @@ install(
 
 # Copy the generated libraries (the .so files)
 install(
-    TARGETS ${PLUGIN_NAME}
+    TARGETS scale_check
     DESTINATION ${REZ_BUILD_INSTALL_PATH}
 )
