--- a/src/usd_utilities/CMakeLists.txt
+++ b/src/usd_utilities/CMakeLists.txt
@@ -1,5 +1,6 @@
 include(cmake/add_scale_check.cmake)
-include(cmake/export_scale_check.cmake)
+include(cmake/add_itermaker.cmake)
+include(cmake/export_all.cmake)
 
 # Copy the header files so external packages can include + use them
 install(
